1.0.0 (in progress)

* improved support to orientdb 1.7.0
* Consolidated configuration
* Fixed quoting issue with RecordIDs in parameters
* Changed method names to match protocol 19
* new commands: db.copy(), db.dataClusterCopy(), db.recordMetadata(), 
    db.positionsCeiling(), db.positionsFloor()

0.9.9 (2013/06/13)

* new commands: db.positionsLower() and db.positionsHigher()                          
* new command: db.isLHClustersUsed()                          
* new commands: db.dataSegmentAdd(), db.dataSegmentDrop()                          
* new commands: server.configList(), server.configGet(), server.configSet()                          
* db.query() is now an alias of db.command()
* added support to query parameters (ex: "SELECT FROM OUser where name = :name")

0.9.8 (2013/02/22)

* added support to SELECT from indexes
* improved support to orientdb 1.3.0
* added support to transactions
* improved "long" type handling
* improved RID parsing
* errors given to callbacks are now instances of Error
* new command: Server.listDatabases
* various minor improvements and bug fixes and contributions