@@ -1,9 +1,9 @@
-"use strict";
+'use strict';
 
-var util = require("util"),
-    base = require("./CommandBase"),
-    parser = require("../connection/parser"),
-    OperationTypes = require("./operation_types"),
+var util			= require('util'),
+    base			= require('./CommandBase'),
+    parser			= require('../connection/parser'),
+    OperationTypes	= require('./operation_types'),
 
     command = function() {
         base.call(this);
@@ -14,18 +14,17 @@ var util = require("util"),
 
 util.inherits(command, base);
 
-module.exports = command;
-
-command.operation = OperationTypes.REQUEST_CONFIG_LIST;
+module.exports		= command;
+command.operation	= OperationTypes.REQUEST_CONFIG_LIST;
 
 function readConfigListCount(buf, offset) {
     if (!parser.canReadShort(buf, offset)) {
         return 0;
     }
-    this.result.numberOfConfigEntries = parser.readShort(buf, offset);
-    this.result.configEntries = [];
+    this.result.count	= parser.readShort(buf, offset);
+    this.result.config	= [];
 
-    if (this.result.numberOfConfigEntries > 0) {
+    if (this.result.count > 0) {
         this.step++;
     } else {
         this.step = this.steps.length;
@@ -47,12 +46,12 @@ function readConfigList(buf, offset) {
 
     var readValue = parser.readString(buf, offset + parser.BYTES_INT + readKey.lengthInBytes);
 
-    this.result.configEntries.push({
+    this.result.config.push({
         key: readKey.value,
         value: readValue.value
     });
 
-    if (this.result.configEntries.length === this.result.numberOfConfigEntries) {
+    if (this.result.config.length === this.result.count) {
         this.step++;
     }
 
@@ -60,14 +59,13 @@ function readConfigList(buf, offset) {
 }
 
 command.write = function(socket, sessionId, data, callback) {
-
-    // operation type
+    //Operation type
     socket.write(parser.writeByte(command.operation));
 
-    // invoke callback immediately when the operation is sent to the server
+    //Invoke callback immediately when the operation is sent to the server
     callback();
 
-    // session ID
+    //Session ID
     socket.write(parser.writeInt(sessionId));
 };
 
