@@ -1,9 +1,9 @@
-"use strict";
+'use strict';
 
-var util = require("util"),
-    base = require("./CommandBase"),
-    parser = require("../connection/parser"),
-    OperationTypes = require("./operation_types"),
+var util			= require('util'),
+    base			= require('./CommandBase'),
+    parser			= require('../connection/parser'),
+    OperationTypes	= require('./operation_types'),
 
     command = function() {
         base.call(this);
@@ -11,25 +11,22 @@ var util = require("util"),
 
 util.inherits(command, base);
 
-module.exports = command;
-
-command.operation = OperationTypes.REQUEST_CONFIG_SET;
+module.exports		= command;
+command.operation	= OperationTypes.REQUEST_CONFIG_SET;
 
 command.write = function(socket, sessionId, data, callback) {
-
-    // operation type
+    //Operation type
     socket.write(parser.writeByte(command.operation));
 
-    // invoke callback immediately when the operation is sent to the server
+    //Invoke callback immediately when the operation is sent to the server
     callback();
 
-    // session ID
+    //Session ID
     socket.write(parser.writeInt(sessionId));
 
-    // config key
-    socket.write(parser.writeString(data.configKey));
-
-    // config value
-    socket.write(parser.writeString(data.configValue));
+    //Config key
+    socket.write(parser.writeString(data.key));
+    //Config value
+    socket.write(parser.writeString(data.value));
 };
 
