@@ -22,7 +22,7 @@ function readSessionId(buf, offset) {
         return 0;
     }
 
-    this.result.sessionId = parser.readInt(buf, offset);
+    this.result = parser.readInt(buf, offset);
     this.step++;
     return parser.BYTES_INT;
 }
