@@ -83,9 +83,7 @@ Server.prototype.connect = function(callback) {
             	return callback(error);
             }
 
-            result			= result || {};
-            self.sessionId	= result.sessionId || -1;
-
+            self.sessionId	= result || -1;
             callback(error, self.sessionId);
         });
     });
