@@ -1,10 +1,10 @@
-"use strict";
+'use strict';
 
-var Server			= require("./connection/server").Server;
-var OperationTypes	= require("./commands/operation_types");
-var parser			= require("./connection/parser");
-var constants		= require("./constants.js");
-var _				= require("lodash");
+var Server			= require('./connection/server').Server;
+var OperationTypes	= require('./commands/operation_types');
+var parser			= require('./connection/parser');
+var constants		= require('./constants.js');
+var _				= require('lodash');
 
 function EMPTY_FUNCTION() {}
 
@@ -12,35 +12,19 @@ var Db = exports.Db = function(config) {
 	if (!config) {
 		throw new Error('OrientDB: Configuration required.');
 	}
-	if (!config.database) {
-		throw new Error('OrientDB: Database name was not provided.');
-	}
-	if (!config.username) {
-		throw new Error('OrientDB: sername was not provided.');
-	}
-	if (!config.password) {
-		throw new Error('OrientDB: Password was not provided.');
-	}
-	if (!config.host) {
-		throw new Error('OrientDB: Host was not provided.');
-	}
-	if (!config.port) {
-		throw new Error('OrientDB: Port was not provided.');
-	}
 
-	this.options		= config || {};
-	this.databaseName	= config.database;
-
+	this.databaseName			= config.database_name;
 	this.currentProtocolVersion	= OperationTypes.CURRENT_PROTOCOL_VERSION;
 
+	//Server instance
 	if(config.server instanceof Server) {
         this.server	= server;
     } else {
     	this.server	= new Server({
-			'userName':config.username,
-			'userPassword':config.password,
-			'host':config.host,
-			'port':config.port
+			'userName':config.server_username,
+			'userPassword':config.server_password,
+			'host':config.server_host,
+			'port':config.server_port
     	});
     }
 
@@ -67,8 +51,8 @@ var Db = exports.Db = function(config) {
 			this.storageType	= 'local';
 	}
 
-    this.userName		= config.username;
-    this.userPassword	= config.password;
+    this.db_username	= config.database_username;
+    this.db_password	= config.database_password;
     this.clusters		= [];
     this.transactionId	= 0;
 };
@@ -78,13 +62,61 @@ Db.prototype.close = function() {
 	this.server.send(OperationTypes.REQUEST_DB_CLOSE, EMPTY_FUNCTION);
 };
 
-Db.prototype.connect = function(callback) {
+Db.prototype.configGet = function(key, callback) {
 	callback	= callback || EMPTY_FUNCTION;
 
-	this.server.connect(function(error, results) {
-		this.serverProtocolVersion	= OperationTypes.SERVER_PROTOCOL_VERSION;
+	var data	= {
+		key:key
+	};
+
+	this.server.send(OperationTypes.REQUEST_CONFIG_GET, data, callback);
+};
+
+Db.prototype.configList = function(callback) {
+	callback	= callback || EMPTY_FUNCTION;
+	this.server.send(OperationTypes.REQUEST_CONFIG_LIST, callback);
+};
+
+Db.prototype.configSet = function(key, value, callback) {
+	callback	= callback || EMPTY_FUNCTION;
+
+	var data	= {
+		key:key,
+		value:value
+	};
+
+	this.server.send(OperationTypes.REQUEST_CONFIG_SET, data, callback);
+};
+
+Db.prototype.connect = function(callback) {
+	var self	= this;
+	callback	= callback || EMPTY_FUNCTION;
+
+	self.server.connect(function(error, results) {
+		self.serverProtocolVersion	= OperationTypes.SERVER_PROTOCOL_VERSION;
 		return callback(error, results);
 	});
+};
+
+Db.prototype.copy = function(database, callback) {
+	callback	= callback || EMPTY_FUNCTION;
+	database	= database || {};
+
+	var databaseUrl			= database.url || '';
+	var databaseUser		= database.username || '';
+	var databasePass		= database.password || '';
+	var remoteServerName	= database.remoteServerName || '';
+	var remoteServerEngine	= database.remoteServerEngine || '';
+
+	var data	= {
+		databaseUrl:databaseUrl,
+		databaseUser:databaseUser,
+		databasePass:databasePass,
+		remoteServerName:remoteServerName,
+		remoteServerEngine:remoteServerEngine
+	};
+
+	this.server.send(OperationTypes.REQUEST_DB_COPY, data, callback);
 };
 
 Db.prototype.create = function(data, callback) {
@@ -122,27 +154,6 @@ Db.prototype.create = function(data, callback) {
 	this.databaseName	= data.databaseName;
 
     this.server.send(OperationTypes.REQUEST_DB_CREATE, data, callback);
-};
-
-Db.prototype.copy = function(database, callback) {
-	callback	= callback || EMPTY_FUNCTION;
-	database	= database || {};
-
-	var databaseUrl			= database.url || '';
-	var databaseUser		= database.username || '';
-	var databasePass		= database.password || '';
-	var remoteServerName	= database.remoteServerName || '';
-	var remoteServerEngine	= database.remoteServerEngine || '';
-
-	var data	= {
-		databaseUrl:databaseUrl,
-		databaseUser:databaseUser,
-		databasePass:databasePass,
-		remoteServerName:remoteServerName,
-		remoteServerEngine:remoteServerEngine
-	};
-
-	this.server.send(OperationTypes.REQUEST_DB_CREATE, data, callback);
 };
 
 Db.prototype.drop = Db.prototype.delete = function(name, type, callback) {
@@ -238,8 +249,8 @@ Db.prototype.open = function(name, type, callback) {
 	var data = {
 		databaseName: name,
 		databaseType: type,
-		userName: self.userName,
-		userPassword: self.userPassword
+		userName: self.db_username,
+		userPassword: self.db_password
 	};
 
 	self.server.init(function(error) {
@@ -251,17 +262,35 @@ Db.prototype.open = function(name, type, callback) {
 	});
 };
 
+Db.prototype.shutdown = function(callback) {
+	callback	= callback || EMPTY_FUNCTION;
+
+	var data	= {
+		username:this.server.userName,
+		password:this.server.userPassword
+	};
+
+	this.server.send(OperationTypes.REQUEST_SHUTDOWN, data, function(error, results) {
+		if(error) {
+			return callback(error);
+		}
+
+		results.status	= 1;
+		callback(null, results);
+	});
+};
+
 Db.prototype.size = function(callback) {
-    callback	= callback || EMPTY_FUNCTION;
+	callback	= callback || EMPTY_FUNCTION;
 
-    this.server.send(OperationTypes.REQUEST_DB_SIZE, function(error, results) {
-        if(error) {
-        	return callback(error);
-        }
+	this.server.send(OperationTypes.REQUEST_DB_SIZE, function(error, results) {
+		if(error) {
+			return callback(error);
+		}
 
-        results	= results.size || 0;
-        callback(null, results);
-    });
+		results	= results.size || 0;
+		callback(null, results);
+	});
 };
 
 
