@@ -5,7 +5,8 @@
 * Fixed quoting issue with RecordIDs in parameters
 * Changed method names to match protocol 19
 * new commands: db.copy(), db.dataClusterCopy(), db.recordMetadata(), 
-    db.positionsCeiling(), db.positionsFloor()
+    db.positionsCeiling(), db.positionsFloor(), db.configGet(), db.configList(), 
+    , db.configSet(), db.serverProtocolVersion, db.currentProtocolVersion
 
 0.9.9 (2013/06/13)
 
